# Timberborn-Mapper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TimberbornMapperWin.spec  mapper.py  pyproject.toml
examples/alpine_lakes/: spec.json  spec_bucketized.json  spec_linear.json
mapper/: __main__.py  image_utils.py  mapper.py
mapper/maps/: format.py  heightmap.py  treemap.py  watermap.py
