[tool.poetry]
name = "timberborn-mapper"
version = "0.3.4-b-1"
description = "Tool for importing heightmap images as Timberborn custom maps."
authors = ["Matthew McMullan"]
license = "BSD 2-Clause \"Simplified\" License"
readme = "README.md"
packages = [{include = "timberborn_mapper"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Pillow = "^9.4.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
unimport = "^0.12.3"
black = "^22.12.0"
isort = "5.*"
pre-commit = "^2.19.0"

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "^5.7.0"

[tool.black]
line-length = 128
target-version = ['py310']

[tool.isort]
line_length = 128

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
